--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="/scripts/freet.js"></script>
   <script src="/scripts/user.js"></script>
   <script src="/scripts/laxuserverification.js"></script>
+  <script src="/scripts/follow.js"></script>
   <script src="/scripts/index.js"></script>
 
 </head>
@@ -146,6 +147,47 @@
           </div>
           <input type="submit" value="See Verification Status of Another User">
         </form>
+
+        <form id="follow-user">
+          <h3>Follow</h3>
+          <div>
+            <label for="username">Username:</label>
+            <input id="username" name="username">
+          </div>
+          <input type="submit" value="Follow">
+        </form>
+
+        <form id="unfollow-user">
+          <h3>Unfollow</h3>
+          <div>
+            <label for="username">Username:</label>
+            <input id="username" name="username">
+          </div>
+          <input type="submit" value="Unfollow">
+        </form>
+        
+        <form id="remove-follower">
+          <h3>Remove Follower</h3>
+          <div>
+            <label for="username">Username:</label>
+            <input id="username" name="username">
+          </div>
+          <input type="submit" value="Remove Follower">
+        </form>
+
+        <form id="users-you-are-following">
+          <h3>View Users You Are Following</h3>
+          <input type="submit" value="View Users You Are Following">
+        </form>
+
+        <form id="your-followers">
+          <h3>View Your Followers</h3>
+          <input type="submit" value="View Your Followers">
+        </form>
+
+
+
+        
 
       </div>
     </section>
