--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,8 @@
           </div>
           <input type="submit" value="Create Freet">
         </form>
-
+        
+        <!--  
         <form id="edit-freet">
           <h3>Edit Freet</h3>
           <div>
@@ -111,6 +112,8 @@
           </div>
           <input type="submit" value="Edit Freet">
         </form>
+        --> 
+
 
         <form id="delete-freet">
           <h3>Delete Freet</h3>
@@ -119,6 +122,24 @@
             <input id="id" name="id">
           </div>
           <input type="submit" value="Delete Freet">
+        </form>
+
+        <form id="make-freet-age-restricted">
+          <h3>Age-Restrict Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Age-Restrict Freet">
+        </form>
+
+        <form id="make-freet-not-age-restricted">
+          <h3>Remove Age-Restriction From Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Remove Age-Restriction From Freet">
         </form>
 
         <form id="verify-user">
