--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <script src="/scripts/user.js"></script>
   <script src="/scripts/laxuserverification.js"></script>
   <script src="/scripts/follow.js"></script>
+  <script src="/scripts/reaction.js"></script>
   <script src="/scripts/index.js"></script>
 
 </head>
@@ -140,6 +141,42 @@
             <input id="id" name="id">
           </div>
           <input type="submit" value="Remove Age-Restriction From Freet">
+        </form>
+
+        <form id="like-freet">
+          <h3>Like Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Like This Freet">
+        </form>
+
+        <form id="remove-like-from-freet">
+          <h3>Remove Like From Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Remove Like">
+        </form>
+
+        <form id="dislike-freet">
+          <h3>Dislike Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Dislike This Freet">
+        </form>
+
+        <form id="remove-dislike-from-freet">
+          <h3>Remove Dislike From Freet</h3>
+          <div>
+            <label for="id">ID:</label>
+            <input id="id" name="id">
+          </div>
+          <input type="submit" value="Remove Dislike">
         </form>
 
         <form id="verify-user">
